<resources>
    <string name="app_name">Dryve</string>
    <string name="splashScreen_appName">Dryve</string>
    <string name="driver_button">I am a Driver</string>
    <string name="customer_button">I am a customer</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_customer_map">Map</string>
    <string name="click_on_the_button_to_request_a_dryve_near_you_tap_again_to_cancel">Click on the button to request a DRYVE near you. Tap again to cancel.</string>
    <string name="hi_there">Hi there!</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="customer_login">Customer Login</string>
    <string name="select_destination_first">select Destination first</string>
    <string name="call">Call</string>
    <string name="car">Car :</string>
    <string name="distance">Distance :</string>
    <string name="driver_name">Driver Name</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="driver_login">Driver Login</string>
    <string name="please_set_up_your_account">Please set up your account</string>
    <string name="customer_name">Customer Name</string>
    <string name="destination">Destination :</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="change_picture">Change Picture</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_car_name">Enter Your Car Name</string>
    <string name="i_am_a_passenger">I am a Passenger</string>
    <string name="i_am_a_dryver">I am a Dryver</string>
    <string name="configure_account_settings">Configure Account Settings</string>
    <string name="please_set_up_your_account_in_order_to_use_this_app">Please set up your account in order to use this app</string>
    <string name="set_up_account">Set up account</string>
    <string name="alright">Alright</string>
    <string name="billing_info">Billing Info</string>
    <string name="the_pricing_may_depend_on_traffic_surges_and_routes_taken_please_consult_with_driver_beforehand">*The pricing may depend on traffic surges and routes taken. Please consult with driver beforehand.</string>
    <string name="pricing_is_set_to_tk_18_per_km">Pricing is set to Tk 18 per km</string>
</resources>
