<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/quantum_black_secondary_text"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/configure_account_settings"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/quantum_black_secondary_text"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="18sp"
        android:text="@string/please_set_up_your_account_in_order_to_use_this_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:textColor="@color/quantum_white_text"
        android:background="@color/quantum_black_secondary_text"
        android:text="@string/set_up_account"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/navi_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>