<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:textAlignment="center"
            android:textColor="@color/quantum_black_secondary_text"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/billing_info"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView

            android:text="@string/pricing_is_set_to_tk_18_per_km"
            android:textColor="@color/quantum_black_secondary_text"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView

            android:text="@string/the_pricing_may_depend_on_traffic_surges_and_routes_taken_please_consult_with_driver_beforehand"
            android:textColor="@color/quantum_black_secondary_text"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="6dp"
            android:textColor="@color/quantum_white_text"
            android:background="@color/quantum_black_secondary_text"
            android:text="Okay"
            android:id="@+id/billing_info_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</LinearLayout>